part3-parser/docs/GRAMMAR.ebnf
program          = { statement } ;

statement        = declaration
                 | assignment
                 | print_statement ;

declaration      = "let", identifier, "=", expression, ";" ;

assignment       = identifier, "=", expression, ";" ;

print_statement  = "print", expression, ";" ;

expression       = addition ;

addition         = multiplication,
                   { ( "+" | "-" ), multiplication } ;

multiplication   = factor,
                   { ( "*" | "/" ), factor } ;

factor           = number
                 | identifier
                 | "(", expression, ")" ;

identifier       = letter, { letter | digit | "_" } ;

number           = digit, { digit },
                   [ ".", digit, { digit } ] ;

letter           = "A" | "B" | "C" | "D" | "E" | "F"
                 | "G" | "H" | "I" | "J" | "K" | "L"
                 | "M" | "N" | "O" | "P" | "Q" | "R"
                 | "S" | "T" | "U" | "V" | "W" | "X"
                 | "Y" | "Z"
                 | "a" | "b" | "c" | "d" | "e" | "f"
                 | "g" | "h" | "i" | "j" | "k" | "l"
                 | "m" | "n" | "o" | "p" | "q" | "r"
                 | "s" | "t" | "u" | "v" | "w" | "x"
                 | "y" | "z" ;

digit            = "0" | "1" | "2" | "3" | "4"
                 | "5" | "6" | "7" | "8" | "9" ;
